Fix code style, fix README, remove unecessary build.yml